--- a/views/index.html
+++ b/views/index.html
@@ -34,9 +34,12 @@
 			<div id="errorDiv" class='errorMsg'></div>
 		</footer>
 
-		<script type="text/javascript" src="/scripts/util.js"></script>
-		<script type="text/javascript" src="/scripts/index.js"></script>
 
 	</div>
+	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.4/angular.min.js"></script>
+	<script src="https://unpkg.com/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script type="text/javascript" src="/scripts/util.js"></script>
+	<script type="text/javascript" src="/scripts/index.js"></script>
 </body>
 </html>
