--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,5 +1,40 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+* {
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	width: 100vw;
+	height: 100vh;
+	font-family: 'Roboto', sans-serif;
+}
+
 .navbar {
-	border: 3px outset grey;
-	width: 50px;
+	/*border: 3px outset grey;*/
+	width: 100%;
 	height: 50px;
+	background-color: rgba(71, 62, 62, 1);
+	color: white;
+}
+
+.navbar > ul > li {
+	display: inline;
+	float: right;
+	margin-right: 2em;
+}
+
+.navbar a:link {
+	color: white;
+	text-decoration: none;
+}
+.navbar a:visited {
+	color: white;
+}
+.navbar a:hover {
+	color: green;
+}
+.navbar a:active{
+	color: pink;
 }
