--- a/public/style/style.css
+++ b/public/style/style.css
@@ -16,6 +16,7 @@ body {
 	width: 100%;
 	height: 50px;
 	background-color: rgba(71, 62, 62, 1);
+	position: fixed;
 	color: white;
 }
 
@@ -40,8 +41,18 @@ body {
 }
 
 .sidebar {
-	border: 3px outset grey;
-	width: 20%;
-    height: 90%;
-    float:left;
+	height: 100%;
+	margin-top: 50px;
+	border-right: 2px outset rgba(71, 62, 62, 1);
+	position: fixed;
+  float:left;
+}
+
+.docs {
+	margin-top: 50px;
+	margin-left: 200px;
+	float: right;
+	/*max-height: 100vh;*/
+	/*overflow: scroll;*/
+	/*float: right;*/
 }
