--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,12 +12,14 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
+/* NAVBAR COMPONENT*/
 .navbar {
 	/*border: 3px outset grey;*/
 	width: 100%;
 	height: 50px;
 	background-color: rgba(71, 62, 62, 1);
 	position: fixed;
+	top: 0;
 	color: white;
 }
 
@@ -41,67 +43,65 @@ body {
 	color: pink;
 }
 
-
-
-
-
+/* SIDEBAR COMPONENT*/
 .sidebar {
 	height: 100%;
 	width: 150px;
-	margin-top: 50px;
+	/*margin-top: 50px;*/
 	border-right: 2px outset rgba(71, 62, 62, 1);
 	position: fixed;
-  float:left;
+  /*left: 0;*/
 }
-
-
 .sidebar ul {
-    /*position: inherit;;*/
 	top: auto;
 	overflow: scroll;
 	height: 80%;
 }
-
 .sidebar form {
     position: inherit;
     bottom: 0;
 }
 
+/* VIEWPORT COMPONENT*/
+.viewport {
+	margin-left: 150px;
+	margin-top: 50px;
+	display: flex;
+}
 
+/* IDENTIFY COMPONENT*/
+.identify {
+	height: 100vh;
+	max-height: 100vh;
+	width: 100%;
+	flex: auto;
+}
+
+/* CONSOLE COMPONENT*/
 .console {
 	width: 50%;
 	height: 100%;
-	border-right: 3px solid grey;
-	margin-top: 50px;
-	margin-left: 150px;
+	border: 3px solid grey;
 	float: left;
 }
-
-
 .console img {
 	border-bottom: 3px solid grey;
 	width: 100%;
 }
-
 .console input:focus {
 	outline: 0;
 }
 
+/* INFO COMPONENT*/
+.info {
+	padding: 1em;
+	max-height: 100%;
+	overflow: scroll;
+}
+
+/* DOCS COMPONENT*/
 .docs {
 	margin-top: 50px;
 	margin-left: 200px;
 	float: right;
-	/*max-height: 100vh;*/
-	/*overflow: scroll;*/
-	/*float: right;*/
-}
-
-.infoWindow {
-	float: right;
-	margin-top: 50px;
-	margin-left: 60vw;
-	height: 90%;
-	overflow: scroll;
-	position: static;
-
 }
