--- a/public/style/style.css
+++ b/public/style/style.css
@@ -10,6 +10,7 @@ body {
 	width: 100vw;
 	height: 100vh;
 	font-family: 'Roboto', sans-serif;
+	border-bottom: 2px outset grey;
 }
 
 /* NAVBAR COMPONENT*/
@@ -18,6 +19,7 @@ body {
 	width: 100%;
 	height: 50px;
 	background-color: rgba(71, 62, 62, 1);
+	border-bottom: 2px outset grey;
 	position: fixed;
 	top: 0;
 	color: white;
@@ -48,7 +50,7 @@ body {
 	height: 100%;
 	width: 150px;
 	/*margin-top: 50px;*/
-	border-right: 2px outset rgba(71, 62, 62, 1);
+	border-right: 2px outset grey;
 	position: fixed;
   /*left: 0;*/
 }
@@ -81,11 +83,11 @@ body {
 .console {
 	width: 50%;
 	height: 100%;
-	border: 3px solid grey;
+	border-right: 2px outset grey;
 	float: left;
 }
 .console img {
-	border-bottom: 3px solid grey;
+	border-bottom: 2px outset grey;
 	width: 100%;
 }
 .console input:focus {
