--- a/public/style/style.css
+++ b/public/style/style.css
@@ -12,6 +12,7 @@ body {
 	height: 100vh;
 	font-family: 'Quicksand', sans-serif;
 	/*border-bottom: 2px outset grey;*/
+	overflow: hidden;
 }
 
 a:link {
@@ -98,14 +99,14 @@ a:active{
 	height: 100vh;
 	max-height: 100vh;
 	width: 100%;
-	flex: auto;
+	/*flex: auto;*/
 }
 
 /* CONSOLE COMPONENT*/
 .console {
 	background-color: rgba(12, 58, 55, 0.03);
 	min-width: 500px;
-	width: 50%;
+	width: 60%;
 	height: 100%;
 	border-right: 2px outset grey;
 	float: left;
@@ -127,7 +128,8 @@ a:active{
 
 /* DOCS COMPONENT*/
 .docs {
-	height: 100%;
+	height: 100vh;
 	width: 100%;
 	padding: 1em;
+	overflow: scroll;
 }
