--- a/public/style/style.css
+++ b/public/style/style.css
@@ -106,6 +106,11 @@ a:active{
 	/*flex: auto;*/
 }
 
+.visualize {
+	width: 100vw;
+	height: 100vh;
+}
+
 /* CONSOLE COMPONENT*/
 .console {
 	background-color: rgba(12, 58, 55, 0.03);
