--- a/public/style/style.css
+++ b/public/style/style.css
@@ -62,6 +62,7 @@ a:active{
 
 /* SIDEBAR COMPONENT*/
 .sidebar {
+	box-shadow: 1px 1px 26px 0px rgba(0,0,0,0.75);
 	font-size: 12px;
 	height: 100%;
 	width: 150px;
