--- a/public/style/style.css
+++ b/public/style/style.css
@@ -26,10 +26,10 @@ a:visited {
 	color: white;
 }
 a:hover {
-	color: green;
+	color: rgb(255, 0, 161);
 }
 a:active{
-	color: pink;
+	color: green;
 }
 
 /* NAVBAR COMPONENT*/
@@ -71,7 +71,7 @@ a:active{
 	border-right: 2px outset grey;
 	position: fixed;
   /*left: 0;*/
-	background-color: rgb(26, 53, 45);
+	background-color: rgb(40, 63, 62);
 }
 .sidebar ul {
 	padding: 1.5em;
